**************
RECENT CHANGES
**************

======
1.85.0
======

* #18 New --format parameter to print data of tables in CSV, XML or JSON (for table helper based commands)
* #270 script:repo:run and error handling (by Cyrill Schumacher)
* #273 Allow directory as argument for db:dump (by Rick Kuipers)
* #274 Running Setup Resource Scripts Incrementally (by Alan Storm)
* #278 After magerun install I always see the Magento Installation Wizard
* #279 Updated documentation to include a few undocumented parameters to config:get (by Tegan Snyder)
* #282 Global variable or function should never be used
* #284 Magento folder could not be detected - When using --noDownload
* #285 Uninstall force bug (by Aydin Hassan)

======
1.84.2
======

* #260 --strip="@development" not working if hardcoded table does not exists

======
1.84.1
======

* #275 There are no commands defined in the "extension" namespace.

======
1.84.0
======

* New commands cache:report and cache:view to look inside the core cache
* Support to enable/disable specific cache types
* Added Magento CE 1.8.1.0 to installer
* #152 Added local autoloader overwrites to dev:module:rewrite:list command.
* #261 Compatibility with environments that disable exec()
* #264 Grammar correction and send warning to stderr (by Melvyn Sopacua)
* #265 Features/install cmd fail invalid db config (by AydinHassan)
* #268 Added @search database table group to readme (by Tegan Snyder)
* Updated Symfony to 2.4

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------

Visit our new blog http://magerun.net